Melhorias gerais para o RESTful, formatacao de datas para o formato iso e padronizadas par UTC conforme boas práticas; Implementado método de criaçao de produtos; Tratativa de VO para trabalhar com datas e não strings, apenas na conversão para json.
